--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^5.15.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "prisma": "^5.15.0"
